Add registration endpoint
