# swagger.yml
@@ -20,6 +20,39 @@ tags:
     description: user authentication
 
 paths:
+  /register:
+    post:
+      tags:
+        - auth
+      summary: Register
+      description: Registers a new user
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: body
+          description: Credentials
+          required: true
+          in: body
+          schema:
+            $ref: "#/definitions/AuthRequest"
+      responses:
+        201:
+          description: created
+        409:
+          description: conflict
+          schema:
+            $ref: "#/definitions/Error"
+          examples:
+            application/json: { "code": 409, "message": {"text": "conflict"}}
+        500:
+          description: internal server error
+          schema:
+            $ref: "#/definitions/Error"
+          examples:
+            application/json: { "code": 500, "message": {"text": "internal server error"}}
+
   /login:
     post:
       tags:
